--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <![endif]-->
   </head>
   <body>
-        <h1>hello</h1>
-        <img src="./img/quail.jpg" alt="..." class="img-circle">
+        <div style="text-align: center;">
+            <img src="./img/quail.jpg" width="1000px" alt="..." class="img-circle" >
+        </div>
       
 
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
