--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
-<!doctype html>
-<html lang="zh-CN">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>quail</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Bootstrap 5 实例</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <script src="js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css" >
+<div class="container-fluid p-5 bg-primary text-white text-center">
+  <h1>我的第一张 Bootstrap 页面</h1>
+  <p>请调整这张响应式页面的大小以查看效果！</p> 
+</div>
 
-    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
-    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
-    <!--[if lt IE 9]>
-      <script src="https://fastly.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://fastly.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-        <div style="text-align: center;">
-            <img src="./img/quail.jpg" width="1000px" alt="..." class="img-circle" >
-        </div>
-      
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>列 1</h3>
+      <p>胜日寻芳泗水滨，无边光景一时新。</p>
+      <p>等闲识得东风面，万紫千红总是春。</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>列 2</h3>
+      <p>纷纷红紫已成尘，布谷声中夏令新。</p>
+      <p>夹路桑麻行不尽，始知身是太平人。</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>列 3</h3>        
+      <p>远上寒山石径斜，白云生处有人家。</p>
+      <p>停车坐爱枫林晚，霜叶红于二月花。</p>
+    </div>
+  </div>
+</div>
 
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="js/jquery-3.2.1.min.js" ></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="js/bootstrap.min.js" ></script>
-  </body>
+</body>
 </html>
