--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>WildAnimals</title>
+  <title>WATB (Benchmark for Wild Animal Tracking)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <script src="js/bootstrap.bundle.min.js"></script>
   <link href="css/me.css" rel="stylesheet">
 </head>
-<body style="border:1px solid red">
+<body >
     <!-- 页眉 -->
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" >
@@ -111,28 +111,28 @@
         <sapn style="margin-left: 50px;">Challenge attribute set in Google Drive:(<b>WATB_attribute_files.rar</b>)</sapn>
         <ul style="padding-left: 100px;">
           <li>
-            <a href="javascript:void(0)"  target="_blank">
+            <a href="https://drive.google.com/file/d/1QekHTqeO4xXOVTRKZWkzAzBt9aOSMVFR/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_part1.zip</font>
               </b>
             </a>
           </li>
           <li>
-            <a href="javascript:void(0)"  target="_blank">
+            <a href="https://drive.google.com/file/d/1gjcDp_fzUr5OOZ51TekZY6K7ySv8HnGg/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_part2.zip</font>
               </b>
             </a>
           </li>
           <li>
-            <a href="javascript:void(0)"  target="_blank">
+            <a href="https://drive.google.com/file/d/1NOxPRK5L-kSx9zS6Yqof84w1FpOm7B0N/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_part3.zip</font>
               </b>
             </a>
           </li>
           <li>
-            <a href="javascript:void(0)"  target="_blank">
+            <a href="https://drive.google.com/file/d/1HxXTKD9KjZDHw6h7Q768e39UySekDPpB/view?usp=sharing"  target="_blank">
               <b>
                 <font style="vertical-align: inherit;">WATB_attribute_files.rar</font>
               </b>
@@ -158,3 +158,4 @@
     </div>
 </body>
 </html>
+
