--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>WildAnimals</title>
+    <title>WATB (Benchmark for Wild Animal Tracking)</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -135,12 +135,12 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Avocet_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Avocet</span>
+                    <span>Avocet<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Avocet1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Avocet1</span>
+                    <span>Avocet1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -419,7 +419,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Gazelle1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Gazelle1</span>
+                    <span>Gazelle1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
             </div>
@@ -427,7 +427,7 @@
             <div class="row">
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Gazelle2_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Gazelle2</span>
+                    <span>Gazelle2<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -541,12 +541,12 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Hyena1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Hyena1</span>
+                    <span>Hyena1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Hyena3_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Hyena3</span>
+                    <span>Hyena3<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -569,7 +569,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Jellyfish_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Jellyfish</span>
+                    <span>Jellyfish<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -673,7 +673,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/LionRest_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>LionRest</span>
+                    <span>LionRest<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -724,7 +724,7 @@
             <div class="row">
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Lynxlynx_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Lynxlynx</span>
+                    <span>Lynxlynx<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -734,12 +734,12 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Mantis1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Mantis1</span>
+                    <span>Mantis1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Mantis2_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Mantis2</span>
+                    <span>Mantis2<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -823,7 +823,7 @@
             <div class="row">
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Octopus_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Octopus</span>
+                    <span>Octopus<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -861,22 +861,22 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Panamic_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Panamic</span>
+                    <span>Panamic<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Pelican1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Pelican1</span>
+                    <span>Pelican1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Pelican2_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Pelican2</span>
+                    <span>Pelican2<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Pelican3_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Pelican3</span>
+                    <span>Pelican3<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -980,7 +980,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Seagull_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Seagull</span>
+                    <span>Seagull<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
             </div>
@@ -993,7 +993,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Shark_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Shark</span>
+                    <span>Shark<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
@@ -1064,12 +1064,12 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Spider1_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Spider1</span>
+                    <span>Spider1<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/Spider2_0001.jpg" style="width: 150px;height: 150px;">
-                    <span>Spider2</span>
+                    <span>Spider2<br/></span>
                     <span>sdjfklasdjfklsdjlfl</span>
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
