--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" >
         <div class="container-fluid">
-          <a class="navbar-brand" href="javascript:void(0)"><span>WildAnimals</span></a>
+          <a class="navbar-brand" href="javascript:void(0)"><span>WATB</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +21,7 @@
             
             <ul class="navbar-nav me-auto">
                 <li class="nav-item" style="margin-left: 200px;">
-                    <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Single Object Tracking</span></a>
+                    <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li>
                 <li class="nav-item" >
                     <a class="nav-link active" href="javascript:void(0)" style="margin-left: 550px;">Home</a>
