--- a/Benchmark.html
+++ b/Benchmark.html
@@ -30,7 +30,7 @@
                     <a class="nav-link active" href="javascript:void(0)">Benchmark</a>
                  </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Evaluation and Result</a>
+                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation and Result</a>
                 </li>
             </ul>
           </div>
@@ -1258,17 +1258,15 @@
                   <tr>
                     <th scope="row" style="width: 10%;">IV</th>
                     <td colspan="3">
+                        <!-- IV 介绍 -->
                         Illumination Variation - the illumination in the target region is significantly changed.
-                        <br>
-                        AcanthopagrusSchlegelii1,
-                        <br>
-                        sdfjlask
-                        <br>
                     </td>
                   </tr>
                   <tr>
                     <th scope="row" style="width: 10%;">OPR</th>
-                    <td colspan="3">Out-of-Plane Rotation – the target rotates out of the image plane.</td>
+                    <td colspan="3">
+                        OPR介绍：
+                    </td>
                   </tr>
                   <tr>
                     <th scope="row" style="width: 10%;">IPR</th>
