--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="./Benchmark.html">Benchmark</a>
                  </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="javascript:void(0)">Evaluation and Result</a>
+                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation and Result</a>
                 </li>
             </ul>
           </div>
