--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
   <title>WATB (Benchmark for Wild Animal Tracking)</title>
@@ -151,11 +151,27 @@
         </ul>
         <h1 class="pt-2 h1-2">Reference</h1>
         <hr/>
+        <!-- 测试html播放视频 -->
+    <video width="320" height="240" controls="controls">
+      <source src="./video/AcridotheresCristatellus.mp4" type="video/mp4" />
+      <source src="movie.ogg" type="video/ogg" />
+      <source src="movie.webm" type="video/webm" />
+      <object data="movie.mp4" width="320" height="240">
+        <embed src="movie.swf" width="320" height="240" />
+      </object>
+    </video>
+    <video src="./video/AcridotheresCristatellus.ogv" controls="controls">
+      your browser does not support the video tag
+      </video>
+      <video src="/video/movie.ogv" controls="controls">
+        your browser does not support the video tag
+        </video>
     </div>
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
       Copyring @ WildAnimal Team 2022
     </div>
+    
 </body>
 </html>
 
