--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <hr/>
         <span>
           We selected three labeled video sequences from 206 data sets for display.
-          These three videos represent sea, land and air respectively.
+          These three videos represent sea, land and sky respectively.
           These datasets are annotated manually, and then the annotated datasets are reviewed.
           For more data set sequences, please see 
           <a href="./Benchmark.html">
