--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/land4.jpg" class="d-block w-100" alt="..." >
+            <img src="./img/ocean1.jpg" class="d-block w-100" alt="..." >
             <!-- <img src="./gif/bos_gaurus.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
               <h5>Ocean</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <p>There are 33 marine animal data sets in WATB.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/ocean1.jpg" class="d-block w-100" alt="..." >
+            <img src="./img/land4.jpg" class="d-block w-100" alt="..." >
             <!-- <img src="./gif/blue_crowd 00_00_00-00_00_30.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
               <h5>Land</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <p>There are 100 terrestrial animal data sets in WATB.</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -66,7 +66,7 @@
             <!-- <img src="./gif/bird_group 00_00_00-00_00_30.gif" class="d-block w-100" alt="..."> -->
             <div class="carousel-caption d-none d-md-block">
               <h5>Sky</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <p>There are 73 bird animal data sets in WATB.</p>
             </div>
           </div>
         </div>
@@ -112,7 +112,7 @@
         <hr/>
         <span>
           We selected three labeled video sequences from 206 data sets for display.
-          These three videos represent sea, land and sky respectively.
+          These three videos represent sea, land and air respectively.
           These datasets are annotated manually, and then the annotated datasets are reviewed.
           For more data set sequences, please see 
           <a href="./Benchmark.html">
@@ -201,7 +201,7 @@
             </a>
           </li>
         </ul>
-        <h1 class="pt-2 h1-2">Reference</h1>
+        <h1 class="pt-2 h1-2">Acknowledgements</h1>
         <hr/>
         
     </div>
