--- a/Benchmark.html
+++ b/Benchmark.html
@@ -46,24 +46,27 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./img/land4.jpg" class="d-block w-100" alt="..." >
+            <img src="./img/ocean1.jpg" class="d-block w-100" alt="..." >
+            <!-- <img src="./gif/bos_gaurus.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <h5>Ocean</h5>
+              <p>There are 33 marine animal data sets in WATB.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./img/ocean1.jpg" class="d-block w-100" alt="..." >
+            <img src="./img/land4.jpg" class="d-block w-100" alt="..." >
+            <!-- <img src="./gif/blue_crowd 00_00_00-00_00_30.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <h5>Land</h5>
+              <p>There are 100 terrestrial animal data sets in WATB.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./img/sky-birds2.jpg" class="d-block w-100" alt="...">
+            <!-- <img src="./gif/bird_group 00_00_00-00_00_30.gif" class="d-block w-100" alt="..."> -->
             <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <h5>Sky</h5>
+              <p>There are 73 bird animal data sets in WATB.</p>
             </div>
           </div>
         </div>
