--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -615,8 +615,8 @@
         </p>
         <div class="container">
           <table class="table">
-            <thead></thead>
-            <thead>
+            
+            <thead class="BoundingLine-Thead">
               <tr>
                 <th scope="col">Trackers</th>
                 <th scope="col">SV</th>
@@ -1237,7 +1237,7 @@
                 </td>
               </tr>
 
-              <tr>
+              <tr class="BoundingLine-HiFt">
                 <th scope="row">HiFT</th>
                 <td>
                   <span>0.250</span>
@@ -1279,7 +1279,7 @@
                   <span>0.192</span>
                 </td>
               </tr>
-              <thead></thead>
+              <!-- <thead></thead> -->
               <tr>
                 <th scope="row">GFSDCF</th>
                 <td>
