--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <hr/>
         <span>
           We refer to OTB data set and TOTB data set in the preliminary work of preparing to establish wildlife tracking benchmark. 
-          If you use watb for research, please consider quoting the following papers:
+          If you use watb for research, please consider cite the following papers:
         </span>
         <br/>
         <ul style="padding-left: 100px;">
