--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-      Copyring @ WildAnimal Team 2022
+      Copyright @ WildAnimal Team 2022
     </div>
     
 </body>
