--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1371,7 +1371,7 @@
     <!-- 页脚 -->
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-        Copyring @ WildAnimal Team 2022
+        Copyright @ WildAnimal Team 2022
     </div>
 </body>
 </html>
