--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -2334,7 +2334,7 @@
 
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-      Copyring @ WildAnimal Team 2022
+      Copyright @ WildAnimal Team 2022
     </div>
 </body>
 </html>
