--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="css/me.css" rel="stylesheet">
 </head>
 <body >
+    
     <!-- 页眉 -->
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" >
@@ -49,8 +50,9 @@
             <img src="./img/ocean1.jpg" class="d-block w-100" alt="..." >
             <!-- <img src="./gif/bos_gaurus.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
-              <h5>Ocean</h5>
-              <p>There are 33 marine animal data sets in WATB.</p>
+              <h5>Marine</h5>
+              <p>There are 29 marine animal sequences in WATB.</p>
+              <p class="lun-picture">Picture from https://unsplash.com/</p>
             </div>
           </div>
           <div class="carousel-item">
@@ -58,15 +60,17 @@
             <!-- <img src="./gif/blue_crowd 00_00_00-00_00_30.gif" class="d-block w-100" alt="..." > -->
             <div class="carousel-caption d-none d-md-block">
               <h5>Land</h5>
-              <p>There are 100 terrestrial animal data sets in WATB.</p>
+              <p>There are 102 terrestrial animal sequences in WATB.</p>
+              <p class="lun-picture">Picture from https://unsplash.com/</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./img/sky-birds2.jpg" class="d-block w-100" alt="...">
             <!-- <img src="./gif/bird_group 00_00_00-00_00_30.gif" class="d-block w-100" alt="..."> -->
             <div class="carousel-caption d-none d-md-block">
-              <h5>Sky</h5>
-              <p>There are 73 bird animal data sets in WATB.</p>
+              <h5>Sky(flying animal)</h5>
+              <p>There are 75 flying animal sequences in WATB.</p>
+              <p class="lun-picture">Picture from https://unsplash.com/</p>
             </div>
           </div>
         </div>
