--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-      Copyright @ WildAnimal Team 2022
+      Copyright @ WATB Team 2022
     </div>
     
 </body>
