--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1375,7 +1375,7 @@
     <!-- 页脚 -->
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-        Copyright @ WildAnimal Team 2022
+        Copyright @ WATB Team 2022
     </div>
 </body>
 </html>
