--- a/EvaluationandResult.html
+++ b/EvaluationandResult.html
@@ -2337,7 +2337,7 @@
 
     <!-- 页脚 -->
     <div class="body-foot bg-dark" >
-      Copyright @ WildAnimal Team 2022
+      Copyright @ WATB Team 2022
     </div>
 </body>
 </html>
