--- a/Benchmark.html
+++ b/Benchmark.html
@@ -1165,7 +1165,7 @@
                 </div>
                 <div class="col-sm-2" style="padding-left: 2.5%; font-size: 14px;">
                     <img src="./img/TheGreatFox_0001.jpg" style="width: 150px;height: 150px;">
-                    <span class="Sequence-name">TheGreatFox</span>
+                    <span class="Sequence-name">Penguin</span>
                     <span class="Sequence-attribute">OPR,DEF,FM,SV,CM,POC,LR</span>
                 </div>
             </div>
