--- a/Benchmark.html
+++ b/Benchmark.html
@@ -12,14 +12,14 @@
     <!-- 页眉 -->
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" >
-        <div class="container-fluid">
+        <div class="container">
           <a class="navbar-brand" href="javascript:void(0)"><span>WATB</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse mx-sm-5" id="mynavbar">
             
-            <ul class="navbar-nav me-auto">
+            <ul class="navbar-nav ms-auto">
                 <!-- <li class="nav-item" style="margin-left: 100px;">
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
