--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
                 <!-- <li class="nav-item" style="margin-left: 100px;">
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown ">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Home
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <li><a class="dropdown-item" href="#Introduction">Introduction</a></li>
+                      <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#Video">Video</a></li>
-                      <!-- <li><hr class="dropdown-divider"></li> -->
+                      <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#Acknowledgements">Acknowledgements</a></li>
                     </ul>
                 </li>
@@ -38,7 +39,7 @@
                     <a class="nav-link" href="./Benchmark.html">Benchmark</a>
                  </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation and Result</a>
+                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation</a>
                 </li>
             </ul>
           </div>
@@ -95,7 +96,7 @@
 
     </div>
     <!-- 主体 -->
-    <div class="container body-body ">
+    <div class="container body-body bg-light navbar-light">
         <h1 class="pt-2" id="Introduction">Introduction</h1>
         <hr/>
         <span>The existing benchmarks do not include enough wild-animal-sequence to evaluate the performance of the tracker. So we build the first benchmark for wild animal tracking(<b>WATB</b>).<br/></span>
