--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
                 <li class="nav-item dropdown ">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Home
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
