--- a/Benchmark.html
+++ b/Benchmark.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Benchmark
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
