--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
                 <!-- <li class="nav-item" style="margin-left: 100px;">
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
-                <li class="nav-item dropdown ">
+                <!-- <li><a class="nav-link" href=""><img src="img/home.jpg" style="width: 10px;height: 10px;"></a></li> -->
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <img src="./img/home.svg" style="width: 20px;height: 20px;">
                       Home
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -36,10 +38,17 @@
                     </ul>
                 </li>
                 <li class="nav-item" >
-                    <a class="nav-link" href="./Benchmark.html">Benchmark</a>
+                    
+                    <a class="nav-link" href="./Benchmark.html">
+                      <img src="./img/database.svg" style="width: 20px;height: 20px;">
+                      Benchmark
+                    </a>
                  </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation</a>
+                    <a class="nav-link" href="./EvaluationandResult.html">
+                      <img src="./img/briefcase.svg" style="width: 20px;height: 20px;">
+                      Evaluation
+                    </a>
                 </li>
             </ul>
           </div>
