--- a/Benchmark.html
+++ b/Benchmark.html
@@ -24,10 +24,14 @@
                     <a class="nav-link" href="javascript:void(0)"><span style="font-size: 20px;">Benchmark for Wild Animal Tracking</span></a>
                 </li> -->
                 <li class="nav-item" >
-                    <a class="nav-link" href="./index.html">Home</a>
+                    <a class="nav-link" href="./index.html">
+                        <img src="./img/home.svg" style="width: 20px;height: 20px;">
+                        Home
+                    </a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="./img/database.svg" style="width: 20px;height: 20px;">
                         Benchmark
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -39,7 +43,11 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./EvaluationandResult.html">Evaluation</a>
+
+                    <a class="nav-link" href="./EvaluationandResult.html">
+                        <img src="./img/briefcase.svg" style="width: 20px;height: 20px;">
+                        Evaluation
+                    </a>
                 </li>
             </ul>
           </div>
